feat: fix table structure for schedule

--- a/pages/src/components/Event/WinnersSection.css
+++ b/pages/src/components/Event/WinnersSection.css
@@ -2,7 +2,7 @@
 :root {
   --color-cap-gold: #D4A843;
   --color-cee-teal: #A8D5D8;
-  --color-cse-navy: #1B365D;
+  --color-cse-navy: #000080;
   --color-heading-teal: #2E8B8B;
   --color-award-gold: #D4A843;
   --color-light-grey: #E8E8E8;
